-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.4, 6.1.0
-
-
4cba29c38cb1b610bf896130050b6c14b7e10c71 (qt/qtquickcontrols2/dev) f3377bd4d790fb07bdcac06ac9f803856fee07d9 (qt/tqtc-qtquickcontrols2/5.15) 5c057b7676cabd05cf342d0a3907c0ce70816172 (qt/qtquickcontrols2/6.1)
The following code causes a crash when the application is closing (e.g. by close bottom).
import QtQuick 2.15 import QtQuick.Controls 2.15 import QtQuick.Window 2.15 Window { id: window width: 640 height: 480 visible: true ScrollView{ anchors.fill: parent Item { id: name } TextArea{ } } }
How to reproduce :
Use the sample code above.
Start the app and press close button.
The message is shown.
"SampleApplication.exe crashed."
For Gerrit Dashboard: QTBUG-93958 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
350507,3 | TextArea: Detach the flickable when it is deleted | dev | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
351005,3 | TextArea: Detach the flickable when it is deleted | 6.1 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
351007,2 | TextArea: Detach the flickable when it is deleted | tqtc/lts-5.15 | qt/tqtc-qtquickcontrols2 | Status: MERGED | +2 | 0 |