TextArea: Detach the flickable when it is deleted

When the flickable is deleted before the TextArea is (which can happen
when it is a child of a ScrollView) then we need to make sure that the
TextArea no longer keeps a reference to the Flickable object.

Fixes: QTBUG-93958
Pick-to: 6.1 5.15
Change-Id: I1745065370718e60bc459192e15eae0e1ba36231
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>